--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+.quasar
 .DS_Store
-node_modules/
-/dist/
+.thumbs.db
+node_modules
+/dist
+/src-cordova/platforms
+/src-cordova/plugins
+/src-cordova/www
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
