--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "author": "Hale Deng <haledeng88@gmail.com>",
   "private": true,
   "scripts": {
+    "dev": "quasar dev",
+    "build": "quasar build",
     "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --fix --ext .js,.vue src",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "dplayer": "^1.25.0",
+    "vue-lazyload": "^1.2.6",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
